fixed a bug in the contact section where it would stretch the container

--- a/main.css
+++ b/main.css
@@ -69,7 +69,7 @@ main {
   justify-content: space-between;
   width: 30px;
   height: 21px;
-  transition-duration: 0.25s;
+  transition-duration: 0.35s;
 }
 
 a.toggle-button:hover {
@@ -122,6 +122,7 @@ h1 {
  #contact p {
     color:blueviolet;
     text-align: left;
+    font-family: 'open sans';
  }
 
  
